add: recent posts

--- a/source/_posts/life/往事系列/2025-10-04-北九州之行.md
+++ b/source/_posts/life/往事系列/2025-10-04-北九州之行.md
@@ -12,7 +12,7 @@ tags:
 
 本来并没有很强烈的旅游欲望，毕竟，距离上次旅游已经过去很久。经过长时间的疫情，我好像已经忘了旅游的感觉以及意义。想起当时疫情放开之后，身边的人发疯似地往外出游，当时我也没有这种感觉，并不觉得被禁锢很久需要出去，可能这就是麻木的可怕之处。
 
-国庆前无意中在论坛看到日本旅游组队，忽然想来一次说走就走的旅游，最近工作生活都极为麻木，出去一下也并不是坏事。日本签证也已经签了一年了，有时候也在想，要是当时去了旅游会不会有所不同，不过已经没什么意义了。组队帖子里已经包含了行程安排，没有太多商榷的空间，虽然行程不是我非常想去的地方，但是抱着节能主义，以及考虑到太久没有出行当作一次复习，行程倒不是非常重要。
+国庆前无意中在论坛看到日本旅游组队，忽然想来一次说走就走的旅游，最近工作生活都极为麻木，出去一下也并不是坏事。日本签证也已经签了一年了，有时候也在想，要是当时去了旅游会不会有所不同，不过已经没什么意义了。组队帖子里已经包含了行程安排，没有太多商榷的空间，虽然行程不是我非常想去的地方，但是抱着节能主义，以及考虑到太久没有出行当作一次复习，行程倒不是非常重要。报名后一顿交钱，说实话，真的轻松，这好像是第一次完全不需要自己做攻略的旅游。
 
 国庆前做的一些旅游准备，还是稍稍激起了一点我的旅游欲望，不过出行当天我的时间安排还是非常极限，没有进行各种“提早”，一切都是刚刚好，好像赶不上也没什么所谓似的。
 
@@ -64,3 +64,84 @@ tags:
 
 ![](/assets/images/2025-10-04-北九州之行/熊本城.jpeg)
 ![](/assets/images/2025-10-04-北九州之行/水前寺公园.jpeg)
+
+有趣的是，在水前寺公园休息的时候，大家刚好收到工资到账短信，然后居然就这个话题讨论了一番，也是非常搞笑。
+
+# Day 4 · 久留米 - 由布院 - 别府
+
+今天基本上在转移中度过，白天从熊本出发坐JR到久留米。其实从行程来看，目的地其实是别府，但是中途会经过一个网红景点由布院，然后又需要在久留米转车，所以在久留米下车逛了一下。
+
+![](/assets/images/2025-10-04-北九州之行/久留米站.jpeg)
+
+从车站来看其实也算是一个比较老旧的车站，虽然整洁，但是能从站牌看出一些年代感。这是一个很纯正的日本小城，出站之后人巨少，路上行走的很多都是悠闲的老太太和老爷爷。日本小城的特点基本上是车站，神社，别墅，走在久留米的街道上感觉不到一丝的烦恼与急躁，即使不逛什么景点，单纯在路上走着，就已经有不错的幸福感。
+
+![](/assets/images/2025-10-04-北九州之行/久留米河边.jpeg)
+
+路过久留米的一个神社，旁边是视野非常开阔的小河。两天是可以跑步的小道，让我想起了京都的鸭川，不过这里比京都宁静多了。当时大伙在这里停留了一段时间，吹着微风，我心里想，在这里生活的人，想必没什么烦恼吧，也不用太努力，也不用想太多，平静生活就可以了，不禁有一点向往。看着自己每天疲于奔命的生活，自由时间也想填满各种兴趣，其实也就只是在兴趣中途有一点幸福，生活整体还是过于奔波。不过俗话有云，任何人都会有自己的烦恼，大家都在羡慕对方的生活，可能他们也有我们无法理解的烦恼吧。
+
+![](/assets/images/2025-10-04-北九州之行/小火车.jpeg)
+
+继续坐上小火车向由布院进发。这种奔驰在乡间的小火车真的很日系，和影视作品看到的完全一模一样，听着火车哧嚓哧嚓的声音，看着车内穿着校服的中学生，看着窗外人烟稀少的原野，心里极为平静，一切烦恼都忘却了。
+
+![](/assets/images/2025-10-04-北九州之行/由布院.jpeg)
+
+由布院感觉是一个小红书网红地方，这里虽然很偏僻，但是中国人韩国人巨多，整个街道都非常商业化，让我想到北京的南锣鼓巷以及成都的宽窄巷子，不过这里的自然环境与商业的结合还是很好的，和国内聒噪的氛围不一样，虽然这里人很多，但是整体感觉还是非常自然和宁静。
+
+由布院逛了一个下午，傍晚继续坐上 JR 前往别府。说到别府，我最先想到的是 Legal High 里面的广末凉子，这居然是个城市这件事情我是没想到的。
+
+![](/assets/images/2025-10-04-北九州之行/别府街道.jpeg)
+
+虽然只是八点左右，但是路上几乎没有任何行人，店铺其实也几乎没开。别府以温泉出名，估计现在天气并不是适合泡温泉的季节，人烟稀少。这里给我的感觉是一个非常宁静的大板，小街道，年代感，以及商店街，都非常“大阪”，不过大阪是现代与传统的结合，而这里，单纯是一个古老的小城而已。
+
+# Day 5 · 别府
+
+今天继续好天气。这么蓝的天空，在国内都不知道有多久没看到过了。今天走的完全是游客线路，地狱温泉打卡。别府地狱温泉有七个，只要买了通票就会发一个打卡纸，但说实话，这几个点基本上都是很小很小的池子，只是不同颜色，不同规模。比如下面的血池地狱，就是混了泥土的颜色所以看起来有点红，但实际上就是一个很小的池子。
+
+![](/assets/images/2025-10-04-北九州之行/血池地狱.jpeg)
+
+但打卡的缺点就是，无论好坏，一旦开始了就会想着将其走完。但有几个点还是有些意外惊喜，比如在海地狱里居然有一个温室荷花池，配合透明天窗，其实还是挺好看的，荷花居然在十月开得正盛。
+
+![](/assets/images/2025-10-04-北九州之行/荷花池.jpeg)
+
+虽然是游客路线，但是别府本身也没什么景点，整体非常悠闲，下午登顶鹤见峰。
+
+# Day 6 · 福冈
+
+一大早退房回福冈，感觉将要迎来本次行程的尾声了。回到福冈感觉，还是大城市好，我还是更喜欢大城市。当然不仅仅是只大城市的先进，方便，多元化，而是日本的大城市，基本上和传统与自然结合的非常好。今天是暴走福冈的一天，不过天晴了一周，今天总算下雨了，也感激上天只在路途的最后一天下雨。
+
+![](/assets/images/2025-10-04-北九州之行/福冈城.jpeg)
+
+到美术馆的途中路过福冈城遗址，在城市街道穿插着这些古城堡，没有一点违和感。日本的美术馆恐怕难以和欧洲相比较，只有部分不错的东西，下面这个佛像，我当时就盯着看了颇久。
+
+![](/assets/images/2025-10-04-北九州之行/佛像.jpeg)
+
+傍晚时分，大队还是继续去游客景点，我对神社已经看腻了，于是独自寻找书店，果然，逛书店才是最大的乐趣。过去逛书店没有什么目的，最后也不知道买什么，之前东京大阪虽然逛过很多，但是基本没有什么收获。但是这次好像开启了什么开关一样，看到什么书都想买，逛了两三小时选了十几二十本。最惊喜的是发现《死亡·Death·Note·笔记》全套，搜了下才发现这套作品已经在豆瓣下架，估计内容还是较为敏感。其余的书也捡了不少，买单的时候有一点点害怕，不知道这些书能否带回来。不过应该还好，毕竟我只是个人阅读，不是用于出售或者传播。
+
+![](/assets/images/2025-10-04-北九州之行/书店收获.jpeg)
+![](/assets/images/2025-10-04-北九州之行/小畑健的画风.jpeg)
+
+回到酒店迫不及待地拆开来看，小畑健的画风果然牛逼。以前其实我并不看漫画，这次可以说是第一次看，没想到一翻开就将我深深吸引，原来漫画这么美好，每一页都是艺术的享受。虽然动画有音效以及对白，但是漫画里的分镜，对白，字体，线条，一切都是那么美好。
+
+![](/assets/images/2025-10-04-北九州之行/福冈日景.jpeg)
+![](/assets/images/2025-10-04-北九州之行/福冈夜景.jpeg)
+
+福冈其实并不小，今天暴走来看有非常多可逛的地方，但由于时间限制也没能去多少地方，头两天的博多区比较冷清，这两天在天神区很热闹，一兰拉面总部一直人满为患，但是福冈有很多一兰分店，我没有很执着一定要在本店吃，可能也没有执着要吃。多年前在东京第一次吃感觉非常惊艳，而后在大阪又吃了一次，依然惊艳，当时还把汤底喝完，发现碗底的彩蛋。这次看到一兰，也算是一个远古愿望的唤醒，于是我还是抱着一定要吃一次一兰的心态去寻找没人的分店。虽然但是，一兰的质量直线下降，甚至让我觉得没有熊本路边的拉面好吃了。
+
+# Day 7 · 福冈
+
+不知不觉到了最后一天，忽然就有点不舍了。早上发疯似地想去更多的地方，然而已经没有太多时间。于是决定还是到高达那里打个卡。坐公交到 lala port，公交还是停在一个街区里的，所以也并不是一下车就能看到巨型高达。从另一边的入口进入 lala port，穿过整个商场之后，才在正门看到高达。不得不说还是有点震撼的，这种机械巨物也算是第一次看到，今天天气不是很好，但是在日本空气质量非常好，白色的福冈牛看着非常雪白，加上红蓝配色以及黑色衬线，无比的秩序感。
+
+![](/assets/images/2025-10-04-北九州之行/高达1.jpeg)
+![](/assets/images/2025-10-04-北九州之行/高达2.jpeg)
+
+对于不是热衷于摄影的我来说，也围着它拍了起码一个多小时，不断在附近寻找合适的机位。一个在旁边停车场顶楼，一个在旁边街区的电线杆旁。不得不说 lala port 是真的好逛啊，各种东西应有尽有，美食，生活用品，超市，二次元，甚至还有各种小孩活动区域。当时我也在想，什么时候国内才能有这样的商场？其实我也不是崇洋媚外的人，心里非常希望身边会有这样的商场，然而，实在没有。
+
+# 后记
+
+回来之后还是有一点恍惚，旅游过后的正常恍惚以及滞后感。
+
+这次去日本还是非常平静，波澜并不多，一方面可能是因为和陌生人去，另一方面可能也是因为太熟悉了。有一些以前觉得非常美好新奇的东西，这次已经没有任何感觉，甚至有点失望，比如刺身，天妇罗，关东煮。但一些熟悉但又普通的东西依然让我感叹，比如蓝天，空气，人文。没有刻意去过分落后和危险的地方，一切还是干净整洁，充满秩序感。
+
+另外这次去感觉很方便了，一切都非常方便，进出境，交通，支付等，可能以后会更经常地去。
+
+让我没想到的是这次反而挑起了我两个兴趣，一个是漫画，一个是模型。回来之后立刻入坑，我对新事物几乎没有抵抗力，有关这两个，后面再专门写文章了。
