add: recent posts

--- a/source/_posts/life/2024-07-03-往事系列.md
+++ b/source/_posts/life/2024-07-03-往事系列.md
@@ -22,10 +22,15 @@ tags:
 - {% post_link life/往事系列/2025-03-02-装修记录-数据 %}
 - {% post_link life/往事系列/2025-03-02-装修记录-问题 %}
 
+# 旅游
+
+- {% post_link life/往事系列/2025-10-04-北九州之行 %}
+
 # 随想
 
 有想法的时候记录一下，没想法的时候吐槽一下。
 
+- {% post_link life/往事系列/2025-10-30-随想 %}
 - {% post_link life/往事系列/2025-08-11-随想 %}
 - {% post_link life/往事系列/2025-06-30-随想 %}
 - {% post_link life/往事系列/2025-05-24-随想 %}
